# maildigest

./: .gitignore  .pre-commit-config.yaml  README.md  config.example.yaml  config.yaml.example  pyproject.toml
.github/workflows/: ci.yml  lint.yml  test.yml
maildigest/: __init__.py  cli.py  config.py  daemon.py  fetcher.py  notifier.py  summarizer.py
tests/: test_cli.py  test_config.py  test_daemon.py  test_fetcher.py  test_notifier.py  test_summarizer.py
